--- a/index.html
+++ b/index.html
@@ -1,51 +1,36 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+    <meta name="description" content="Moto G 2014 ToolKit : ">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Moto G 2014 ToolKit by luca020400</title>
+    <title>Moto G 2014 ToolKit</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/luca020400/Moto-G-2014-Tool">View on GitHub</a>
-    <div class="shell">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Moto G 2014 ToolKit</h1>
-            <h2></h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/luca020400/Moto-G-2014-ToolKit">View on GitHub</a>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/luca020400/Moto-G-2014-Tool/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/luca020400/Moto-G-2014-Tool/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
+          <h1 id="project_title">Moto G 2014 ToolKit</h1>
+          <h2 id="project_tagline"></h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/luca020400/Moto-G-2014-ToolKit/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/luca020400/Moto-G-2014-ToolKit/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="tool-for-the-moto-g-2014" class="anchor" href="#tool-for-the-moto-g-2014" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tool for the Moto G 2014</h1>
 
@@ -81,23 +66,19 @@ philz.bat boot/flash</pre></div>
 <h2>
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h2>
 
-<p><a href="https://github.com/luca020400/Moto-G-2014-Tool/archive/master.zip">https://github.com/luca020400/Moto-G-2014-Tool/archive/master.zip</a></p>
+<p><a href="https://github.com/luca020400/Moto-G-2014-Tool/archive/stable.zip">https://github.com/luca020400/Moto-G-2014-Tool/archive/stable.zip</a></p>
       </section>
+    </div>
 
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/luca020400">luca020400</a> can be found on <a href="https://github.com/luca020400/Moto-G-2014-Tool">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Moto G 2014 ToolKit maintained by <a href="https://github.com/luca020400">luca020400</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
-
     </div>
 
     
+
   </body>
 </html>
