Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
 <h2>
 <a id="how-to-use-" class="anchor" href="#how-to-use-" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use :</h2>
 
+<h2>
+<a id="you-need-an-unlocked-bootloader" class="anchor" href="#you-need-an-unlocked-bootloader" aria-hidden="true"><span class="octicon octicon-link"></span></a>You need an unlocked bootloader</h2>
+
+<p>Thanks to Falcon G for the guide :
+<a href="http://forum.xda-developers.com/moto-g-2014/development/wip-unlock-bootloader-moto-g-2nd-gen-t2875728">http://forum.xda-developers.com/moto-g-2014/development/wip-unlock-bootloader-moto-g-2nd-gen-t2875728</a></p>
+
+<p>Reboot your phone into bootloader</p>
+
 <p>Linux and Mac OS X:</p>
 
 <div class="highlight highlight-bash"><pre>./root.sh titan_(device <span class="pl-s3">type</span> <span class="pl-s3">:</span> like titan_retaildsds )
@@ -55,13 +63,6 @@
 <div class="highlight highlight-bash"><pre>root.bat titan_(device <span class="pl-s3">type</span> <span class="pl-s3">:</span> like titan_retaildsds )
 twrp.bat boot/flash
 philz.bat boot/flash</pre></div>
-
-<h2>
-<a id="you-need-an-unlocked-bootloader" class="anchor" href="#you-need-an-unlocked-bootloader" aria-hidden="true"><span class="octicon octicon-link"></span></a>You need an unlocked bootloader</h2>
-
-<p>Thanks to Falcon G for the guide :</p>
-
-<p><a href="http://forum.xda-developers.com/moto-g-2014/development/wip-unlock-bootloader-moto-g-2nd-gen-t2875728">http://forum.xda-developers.com/moto-g-2014/development/wip-unlock-bootloader-moto-g-2nd-gen-t2875728</a></p>
 
 <h2>
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h2>
