Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
 <p>Thanks to Falcon G for the guide :
 <a href="http://forum.xda-developers.com/moto-g-2014/development/wip-unlock-bootloader-moto-g-2nd-gen-t2875728">http://forum.xda-developers.com/moto-g-2014/development/wip-unlock-bootloader-moto-g-2nd-gen-t2875728</a></p>
 
-<p>Reboot your phone into bootloader</p>
+<p>Reboot your phone into bootloader ( Volume Down and Power Button )</p>
 
 <p>Linux and Mac OS X:</p>
 
-<div class="highlight highlight-bash"><pre>./root.sh titan_(device <span class="pl-s3">type</span> <span class="pl-s3">:</span> like titan_retaildsds )
+<div class="highlight highlight-bash"><pre>./root.sh titan_<span class="pl-vo">$device</span> ( like titan_retaildsds )
 ./twrp.sh boot/flash
 ./philz.bat boot/flash</pre></div>
 
 <p>Windows :</p>
 
-<div class="highlight highlight-bash"><pre>root.bat titan_(device <span class="pl-s3">type</span> <span class="pl-s3">:</span> like titan_retaildsds )
+<div class="highlight highlight-bash"><pre>root.bat titan_<span class="pl-vo">$device</span> ( like titan_retaildsds )
 twrp.bat boot/flash
 philz.bat boot/flash</pre></div>
 
