Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
 <h2>
 <a id="you-need-an-unlocked-bootloader" class="anchor" href="#you-need-an-unlocked-bootloader" aria-hidden="true"><span class="octicon octicon-link"></span></a>You need an unlocked bootloader</h2>
 
-<p>Thanks to Falcon G for the guide :
-<a href="http://forum.xda-developers.com/moto-g-2014/development/wip-unlock-bootloader-moto-g-2nd-gen-t2875728">http://forum.xda-developers.com/moto-g-2014/development/wip-unlock-bootloader-moto-g-2nd-gen-t2875728</a></p>
+<p>Thanks to Falcon G for the guide :</p>
+
+<p><a href="http://forum.xda-developers.com/moto-g-2014/development/wip-unlock-bootloader-moto-g-2nd-gen-t2875728">http://forum.xda-developers.com/moto-g-2014/development/wip-unlock-bootloader-moto-g-2nd-gen-t2875728</a></p>
 
 <p>Reboot your phone into bootloader ( Volume Down and Power Button )</p>
 
