Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
 
 <p>1) <a href="https://github.com/Chainfire" class="user-mention">@Chainfire</a> autoroot ( root without a recovery )</p>
 
-<p>2) TWRP and PHILZ TOUCH ( root with a recovery ) ( You can flash or boot it )</p>
+<p>2) TWRP and PHILZ TOUCH ( root with a recovery ) ( You can flash or boot it )ù</p>
+
+<p>3) Remove/Restore Unlocked Bootloader Warning</p>
 
 <h2>
 <a id="how-to-use-" class="anchor" href="#how-to-use-" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use :</h2>
