Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -74,13 +74,15 @@
 
 <div class="highlight highlight-bash"><pre>./root.sh titan_<span class="pl-vo">$device</span> ( like titan_retaildsds )
 ./twrp.sh boot/flash
-./philz.bat boot/flash</pre></div>
+./philz.bat boot/flash
+./logo.sh nowarning/warning</pre></div>
 
 <p>Windows :</p>
 
 <div class="highlight highlight-bash"><pre>root.bat titan_<span class="pl-vo">$device</span> ( like titan_retaildsds )
 twrp.bat boot/flash
-philz.bat boot/flash</pre></div>
+philz.bat boot/flash
+logo.sh nowarning/warning</pre></div>
 
 <h2>
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h2>
