--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <p>Windows :</p>
 
 <div class="highlight highlight-bash"><pre>bootloader.bat unlock/relock
-root.bat titan_<span class="pl-vo">$device</span> ( like titan_retaildsds )
+root.bat titan_%device ( like titan_retaildsds )
 twrp.bat boot/flash
 philz.bat boot/flash
 logo.sh nowarning/warning</pre></div>
