Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
 <h2>
 <a id="how-to-use-" class="anchor" href="#how-to-use-" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use :</h2>
 
+<p>Drivers :</p>
+
+<p>Windows : <a href="https://www.motorola.com/getmdmwin">https://www.motorola.com/getmdmwin</a>
+Mac OS X : <a href="https://www.motorola.com/getmdmmac">https://www.motorola.com/getmdmmac</a>
+Linux : Already Included</p>
+
 <p>Reboot your phone into bootloader ( Volume Down and Power Button )</p>
 
 <p>Linux and Mac OS X:</p>
@@ -79,7 +85,7 @@
 root.bat titan_%device ( like titan_retaildsds )
 twrp.bat boot/flash
 philz.bat boot/flash
-logo.sh nowarning/warning</pre></div>
+logo.bat nowarning/warning</pre></div>
 
 <h2>
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h2>
