Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -60,18 +60,22 @@
 
 <p>4) Remove/Restore Unlocked Bootloader Warning</p>
 
+<h1>
+<a id="how-to-use-" class="anchor" href="#how-to-use-" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use :</h1>
+
 <h2>
-<a id="how-to-use-" class="anchor" href="#how-to-use-" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use :</h2>
+<a id="drivers-" class="anchor" href="#drivers-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Drivers :</h2>
 
-<p>Drivers :</p>
+<p>Windows : <a href="https://www.motorola.com/getmdmwin">https://www.motorola.com/getmdmwin</a></p>
 
-<p>Windows : <a href="https://www.motorola.com/getmdmwin">https://www.motorola.com/getmdmwin</a>
-Mac OS X : <a href="https://www.motorola.com/getmdmmac">https://www.motorola.com/getmdmmac</a>
-Linux : Already Included</p>
+<p>Mac OS X : <a href="https://www.motorola.com/getmdmmac">https://www.motorola.com/getmdmmac</a></p>
+
+<p>Linux : Already Included</p>
 
 <p>Reboot your phone into bootloader ( Volume Down and Power Button )</p>
 
-<p>Linux and Mac OS X:</p>
+<h2>
+<a id="linux-and-mac-os-x" class="anchor" href="#linux-and-mac-os-x" aria-hidden="true"><span class="octicon octicon-link"></span></a>Linux and Mac OS X:</h2>
 
 <div class="highlight highlight-bash"><pre>./bootloader.sh unlock/relock
 ./root.sh titan_<span class="pl-vo">$device</span> ( like titan_retaildsds )
@@ -79,7 +83,8 @@ Linux : Already Included</p>
 ./philz.bat boot/flash
 ./logo.sh nowarning/warning</pre></div>
 
-<p>Windows :</p>
+<h2>
+<a id="windows-" class="anchor" href="#windows-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Windows :</h2>
 
 <div class="highlight highlight-bash"><pre>bootloader.bat unlock/relock
 root.bat titan_%device ( like titan_retaildsds )
