Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
       <section id="main_content">
         <h1>
-<a id="tool-for-the-moto-g-2014" class="anchor" href="#tool-for-the-moto-g-2014" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tool for the Moto G 2014</h1>
+<a id="moto-g-2014-toolkit-luca020400" class="anchor" href="#moto-g-2014-toolkit-luca020400" aria-hidden="true"><span class="octicon octicon-link"></span></a>Moto G 2014 ToolKit <a href="http://forum.xda-developers.com/member.php?u=5778309">luca020400</a>
+</h1>
 
 <h2>
 <a id="this-tool-include--" class="anchor" href="#this-tool-include--" aria-hidden="true"><span class="octicon octicon-link"></span></a>This tool include : </h2>
