--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <p>2) TWRP and PHILZ TOUCH ( root with a recovery ) ( You can flash or boot it )</p>
 
-<p>3) <a href="https://github.com/Chainfire" class="user-mention">@Chainfire</a> Autoroot ( root without a recovery )</p>
+<p>3) Automatic Root Script</p>
 
 <p>4) Remove/Restore Unlocked Bootloader Warning</p>
 
@@ -79,7 +79,7 @@
 <a id="linux-and-mac-os-x" class="anchor" href="#linux-and-mac-os-x" aria-hidden="true"><span class="octicon octicon-link"></span></a>Linux and Mac OS X:</h2>
 
 <div class="highlight highlight-bash"><pre>./bootloader.sh unlock/relock
-./root.sh titan_<span class="pl-vo">$device</span> ( like titan_retaildsds )
+./root.sh
 ./twrp.sh boot/flash
 ./philz.bat boot/flash
 ./logo.sh nowarning/warning</pre></div>
@@ -88,7 +88,7 @@
 <a id="windows-" class="anchor" href="#windows-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Windows :</h2>
 
 <div class="highlight highlight-bash"><pre>bootloader.bat unlock/relock
-root.bat titan_%device ( like titan_retaildsds )
+root.bat
 twrp.bat boot/flash
 philz.bat boot/flash
 logo.bat nowarning/warning</pre></div>
