Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
 <h2>
 <a id="this-tool-include--" class="anchor" href="#this-tool-include--" aria-hidden="true"><span class="octicon octicon-link"></span></a>This tool include : </h2>
 
-<p>1) Unlock / Relock the bootloader</p>
+<p>1) Universal Moto G 2014 Support</p>
 
-<p>2) TWRP and PHILZ TOUCH ( root with a recovery ) ( You can flash or boot it )</p>
+<p>2) Unlock / Relock the bootloader</p>
 
-<p>3) Automatic Root Script</p>
+<p>3) TWRP and PHILZ TOUCH ( root with a recovery ) ( You can flash or boot it )</p>
 
-<p>4) Remove/Restore Unlocked Bootloader Warning</p>
+<p>4) Automatic Root Script</p>
+
+<p>5) Remove/Restore Unlocked Bootloader Warning</p>
 
 <h1>
 <a id="how-to-use-" class="anchor" href="#how-to-use-" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use :</h1>
