--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <div class="highlight highlight-bash"><pre>./bootloader.sh unlock/relock
 ./root.sh
 ./twrp.sh boot/flash
-./philz.bat boot/flash
+./philz.sh boot/flash
 ./logo.sh nowarning/warning</pre></div>
 
 <h2>
