Added some information

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 
 <h1>
 <a id="how-to-use-" class="anchor" href="#how-to-use-" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use :</h1>
+<p> You will first need to unlock the bootloader of your device using <strong>bootloader.sh</strong>(or <strong>bootloader.bat</strong> if you are on
+    Windows). During the execution of this script you will get a Motorola Code from the official Motorola site.</p>
+<p>To use this tool you need to know how to use your <a href="http://en.wikipedia.org/wiki/Shell_(computing)"> operating system shell</a>
+   to execute the scripts because at the moment there is no GUI for this program.</p>
 
 <h2>
 <a id="drivers-" class="anchor" href="#drivers-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Drivers :</h2>
@@ -76,6 +80,8 @@
 <p>Linux : Already Included</p>
 
 <p>Reboot your phone into bootloader ( Volume Down and Power Button )</p>
+<p><strong>First of all you should unlock the bootloader</strong>, otherwise the other scripts will
+not work</p>
 
 <h2>
 <a id="linux-and-mac-os-x" class="anchor" href="#linux-and-mac-os-x" aria-hidden="true"><span class="octicon octicon-link"></span></a>Linux and Mac OS X:</h2>
