--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 <h1>
 <a id="how-to-use-" class="anchor" href="#how-to-use-" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use :</h1>
-<p> You will first need to unlock the bootloader of your device using <strong>bootloader.sh</strong>(or <strong>bootloader.bat</strong> if you are on
+<p> You will first need to unlock the bootloader of your device using <strong>bootloader.sh</strong> (or <strong>bootloader.bat</strong> if you are on
     Windows). During the execution of this script you will get a Motorola Code from the official Motorola site.</p>
 <p>To use this tool you need to know how to use your <a href="http://en.wikipedia.org/wiki/Shell_(computing)"> operating system shell</a>
    to execute the scripts because at the moment there is no GUI for this program.</p>
@@ -81,10 +81,12 @@
 
 <p>Reboot your phone into bootloader ( Volume Down and Power Button )</p>
 <p><strong>First of all you should unlock the bootloader</strong>, otherwise the other scripts will
-not work</p>
+not work.</p>
 
 <h2>
 <a id="linux-and-mac-os-x" class="anchor" href="#linux-and-mac-os-x" aria-hidden="true"><span class="octicon octicon-link"></span></a>Linux and Mac OS X:</h2>
+<strong>Note</strong>: You have to run fastboot as root or with sudo. If you don't want to do that, there is a better and
+more permanent solution <a href="http://wiki.cyanogenmod.org/w/UDEV">documented on the Cyanogenmod wiki</a>.
 
 <div class="highlight highlight-bash"><pre>./bootloader.sh unlock/relock
 ./root.sh
