Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
 
 <p>2) Unlock / Relock the bootloader</p>
 
-<p>3) TWRP and PHILZ TOUCH ( root with a recovery ) ( You can flash or boot it )</p>
+<p>3) Twrp and Philz Touch Recovery</p>
 
 <p>4) Automatic Root Script</p>
 
-<p>5) Remove/Restore Unlocked Bootloader Warning</p>
+<p>5) Automatic BusyBox Installer</p>
+
+<p>6) Remove/Restore Unlocked Bootloader Warning</p>
+
+<p>7) Reboot to Bootloader/Recovery/Phone</p>
 
 <h1>
 <a id="how-to-use-" class="anchor" href="#how-to-use-" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use :</h1>
-<p> You will first need to unlock the bootloader of your device using <strong>bootloader.sh</strong> (or <strong>bootloader.bat</strong> if you are on
-    Windows). During the execution of this script you will get a Motorola Code from the official Motorola site.</p>
-<p>To use this tool you need to know how to use your <a href="http://en.wikipedia.org/wiki/Shell_(computing)"> operating system shell</a>
-   to execute the scripts because at the moment there is no GUI for this program.</p>
 
 <h2>
 <a id="drivers-" class="anchor" href="#drivers-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Drivers :</h2>
@@ -79,29 +79,15 @@
 
 <p>Linux : Already Included</p>
 
-<p>Reboot your phone into bootloader ( Volume Down and Power Button )</p>
-<p><strong>First of all you should unlock the bootloader</strong>, otherwise the other scripts will
-not work.</p>
-
 <h2>
 <a id="linux-and-mac-os-x" class="anchor" href="#linux-and-mac-os-x" aria-hidden="true"><span class="octicon octicon-link"></span></a>Linux and Mac OS X:</h2>
-<strong>Note</strong>: You have to run fastboot as root or with sudo. If you don't want to do that, there is a better and
-more permanent solution <a href="http://wiki.cyanogenmod.org/w/UDEV">documented on the Cyanogenmod wiki</a>.
 
-<div class="highlight highlight-bash"><pre>./bootloader.sh unlock/relock
-./root.sh
-./twrp.sh boot/flash
-./philz.sh boot/flash
-./logo.sh nowarning/warning</pre></div>
+<p>Double Click on toolkit.sh</p>
 
 <h2>
 <a id="windows-" class="anchor" href="#windows-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Windows :</h2>
 
-<div class="highlight highlight-bash"><pre>bootloader.bat unlock/relock
-root.bat
-twrp.bat boot/flash
-philz.bat boot/flash
-logo.bat nowarning/warning</pre></div>
+<p>Double Click on toolkit.bat</p>
 
 <h2>
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h2>
